@@ -1,3 +1,7 @@
+Wed Oct  9 01:17:25 1996  Kevin Layer  <layer@freezer>
+
+	* Makefile: add `tiger'
+
 Wed Oct  9 00:57:03 1996  Kevin Layer  <layer@freezer>
 
 	* Makefile: fix rdist rule
